--- a/SciCalk/SciCalk/AppShell.xaml
+++ b/SciCalk/SciCalk/AppShell.xaml
@@ -3,13 +3,12 @@
     x:Class="SciCalk.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:SciCalk"
-    Shell.FlyoutBehavior="Flyout"
+    xmlns:local="clr-namespace:SciCalk.Views"
     Title="SciCalk">
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+        ContentTemplate="{DataTemplate local:CalculatorPage}"
+        Route="CalculatorPage" />
 
 </Shell>
