--- a/SciCalk/SciCalk/Views/CalculatorPage.xaml
+++ b/SciCalk/SciCalk/Views/CalculatorPage.xaml
@@ -3,10 +3,107 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SciCalk.Views.CalculatorPage"
              Title="CalculatorPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+    <Grid 
+        RowDefinitions="*,68,48,44,44,48,64,64,64"
+        ColumnDefinitions="*,*,*,*,*">
+        <!--Color Anwser Row-->
+        <BoxView
+            VerticalOptions="Fill"
+            HorizontalOptions="Fill"
+            BackgroundColor="#262D37"
+            Grid.Row="1"
+            Grid.ColumnSpan="5"/>
+        <!--input Area-->
+        <Border
+            Padding="6,0,4,0"
+            Margin="12"
+            Stroke="{StaticResource PrimaryColor}"
+            BackgroundColor="#2C3240"
+            HorizontalOptions="End"
+            VerticalOptions="End"
+            Grid.Row="0"
+            Grid.Column="0"
+            Grid.ColumnSpan="5">
+            <Label
+                LineHeight="1.5"
+                VerticalOptions="Center"
+                VerticalTextAlignment="Center">
+                <Label.FormattedText>
+                    <FormattedString>
+                        <Span Text="{Binding InputText}" Style="{StaticResource InputBoxLableStyle}"/>
+                    </FormattedString>
+                </Label.FormattedText>
+            </Label>
+        </Border>
+        
+        <!--Anwser row-->
+        <Grid
+            ColumnDefinitions="Auto,*"
+            Grid.Row="1"
+            Grid.Column="0"
+            Grid.ColumnSpan="5">
+            <Label
+                Text="="
+                VerticalOptions="Center"
+                VerticalTextAlignment="Center"
+                Style="{StaticResource EqualsLableStyle}"
+                Margin="16,0"/>
+            <Label
+                Text="{Binding CalculatedResult, Mode=OneWay}"
+                VerticalOptions="Center"
+                VerticalTextAlignment="Center"
+                HorizontalOptions="End"
+                Grid.Column="1"
+                Style="{StaticResource ResultLableStyle}"
+                Margin="16,0"/>
+        </Grid>
+        
+        <!--Scientific Operators-->
+        <!--Row 1-->
+        <Button
+            Grid.Row="2"
+            Grid.Column="0"
+            ZIndex="1"
+            Margin="6,10,6,4"
+            Style="{StaticResource SientifficOperatorButtonStyle}"
+            Text="MEAN"/>
+        <Button
+            Grid.Row="2"
+            Grid.Column="1"
+            ZIndex="1"
+            Margin="6,10,6,4"
+            Style="{StaticResource SientifficOperatorButtonStyle}"
+            Text="MOD"/>
+        <Button
+            Grid.Row="2"
+            Grid.Column="2"
+            ZIndex="1"
+            Margin="6,10,6,4"
+            Style="{StaticResource SientifficOperatorButtonStyle}"
+            Text="STD"/>
+        <Button
+            Grid.Row="2"
+            Grid.Column="3"
+            ZIndex="1"
+            Margin="6,10,6,4"
+            Style="{StaticResource SientifficOperatorButtonStyle}"
+            Text="VAR"/>
+        <Button
+            Grid.Row="2"
+            Grid.Column="4"
+            ZIndex="1"
+            Margin="6,10,6,4"
+            Style="{StaticResource SientifficOperatorButtonStyle}"
+            Text="FACT"/>
+
+        <!--Row 2-->
+        <Button
+            Grid.Row="3"
+            Grid.Column="0"
+            ZIndex="1"
+            Style="{StaticResource SientifficOperatorButtonStyle}"
+            Text="SIN"
+            Command="{Binding SientificOperatorCommand}"
+            CommandParameter="SIN"/>
+    </Grid>
 </ContentPage>
