--- a/MauiPlanets/MauiPlanets/Resources/Styles/Colors.xaml
+++ b/MauiPlanets/MauiPlanets/Resources/Styles/Colors.xaml
@@ -6,7 +6,7 @@
 
     <!-- Note: For Android please see also Platforms\Android\Resources\values\colors.xml -->
 
-    <Color x:Key="PrimaryBackgroundColor">#F1EFF0</Color>
+    <Color x:Key="FrameBackgroundColor">#F1EFF0</Color>
     <Color x:Key="BorderColor">Transparent</Color>
     <Color x:Key="DarkTextColor">#252525</Color>
     <Color x:Key="ButtonBackgroundColor">#ed5757</Color>
